@@ -1,3 +1,10 @@
+2014-01-17  Alexey Proskuryakov  <ap@apple.com>
+
+        More iOS build fix.
+
+        * WebView/WebPreferences.mm: (-[WebPreferences _synchronizeWebStoragePolicyWithCookiePolicy]):
+        NSHTTPCookieAcceptPolicyExclusivelyFromMainDocumentDomain is not part of NSHTTPCookieAcceptPolicy enum.
+
 2014-01-16  Daniel Bates  <dabates@apple.com>
 
         [iOS] MobileSafari build fix. Declare iOS-specific method mainFrameIconURL
